--- a/Lista 3/Ex2/public_html/css/stylesheet.css
+++ b/Lista 3/Ex2/public_html/css/stylesheet.css
@@ -13,5 +13,5 @@
 {
     border-color: #fd913f;
     border-width: 5px;
-    box-shadow: inset 0 0 0 25px #fdcd8e;
+    background-color:#fdcd8e;
 }
